Formatting updates made.

--- a/First Portfolio Project.ipynb
+++ b/First Portfolio Project.ipynb
@@ -11,35 +11,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 1 - DEFINE"
+    "### Problem Definition"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ---- 1 Define the problem ----"
+    "As a Data Scientist in the recruitment industry, my goal is to build a system to predict salaries for a new set of job postings based on data provided on a set of historic job postings that include salaries.\n",
+    "\n",
+    "Two CSV data files are available as a basis for training a machine learning model:\n",
+    "\n",
+    "• train_features.csv: Each row represents metadata for an individual job posting.\n",
+    "The “jobId” column represents a unique identifier for the job posting. The remaining columns describe features of the job posting.\n",
+    "• train_salaries.csv: Each row associates a “jobId” with a “salary”.\n",
+    "\n",
+    "The data upon which predictions should be made are stored in a further CSV data file:\n",
+    "\n",
+    "• test_features.csv: Similar to train_features.csv, each row represents metadata for an individual job posting.\n",
+    "\n",
+    "The output of my system should be a CSV file entitled test_salaries.csv where each row has the following format:\n",
+    "\n",
+    "jobId, salary"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write the problem in your own words here"
+    "### Library Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import your libraries\n",
+    "# Importing base libraries\n",
     "import pandas as pd\n",
-    "import sklearn as sk\n",
-    "#etc\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "sns.set(style=\"darkgrid\")\n",
     "\n",
-    "#your info here\n",
+    "# Importing scikit-learn pre-processing libraries\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Importing scikit-learn machine learning libraries\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Author information\n",
     "__author__ = \"Ross MacDonald\"\n",
     "__email__ = \"ross.macdonald@technologist.com\""
    ]
@@ -48,41 +72,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 2 - DISCOVER"
+    " ### Reusable Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load CSV data file with completion dialogue and shape confirmation\n",
+    "def load_file(file):\n",
+    "    df =  pd.read_csv(file)\n",
+    "    shape = df.shape\n",
+    "    print(\"Data file is loaded, the shape of the dataset = {}\".format(shape))\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ---- 2 Load the data ----"
+    "### Load the Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data file is loaded, the shape of the dataset = (1000000, 8)\n",
+      "Data file is loaded, the shape of the dataset = (1000000, 2)\n",
+      "Data file is loaded, the shape of the dataset = (1000000, 8)\n"
+     ]
+    }
+   ],
    "source": [
-    "#load the data into a Pandas dataframe\n",
-    "train_feature_df = pd.read_csv('data/train_features.csv')\n",
-    "train_target_df = pd.read_csv('data/train_salaries.csv')\n",
-    "test_df = pd.read_csv('data/test_features.csv')"
+    "# Load the data into pandas dataframes (csv files for training and test data)\n",
+    "train_feature_df = load_file('data/train_features.csv')\n",
+    "train_target_df = load_file('data/train_salaries.csv')\n",
+    "test_df = load_file('data/test_features.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Merge the data on the jobId to get a single dataset for EDA\n",
+    "# Merge the data on jobId to get a single training dataset (includes features and target)\n",
     "train_df = pd.merge(train_feature_df,train_target_df,how=\"inner\",on=\"jobId\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -268,20 +316,19 @@
        "9       AUTO               17                   68     104  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#look for duplicate data, invalid data (e.g. salaries <=0), or corrupt data and remove it\n",
-    "#initial check of top 10 rows of train_feature_df to confirm load and get an initial view on data / types\n",
+    "# Initial check of top 10 rows of train_df to confirm load and get an initial view on data / types\n",
     "train_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -456,26 +503,19 @@
        "9               23                   97  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#initial check of top 10 rows of test_feature_df to confirm load and get an initial view on data / types\n",
+    "# Initial check of top 10 rows of test_feature_df to confirm load and get an initial view on data / types\n",
     "test_df.head(10)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ---- 3 Clean the data ----"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -500,20 +540,13 @@
     }
    ],
    "source": [
-    "#get info for the train_feature_df dataframe\n",
+    "# Get information on the train_feature_df dataframe. Ensure data types and number of entries per column are as expected.\n",
     "train_df.info()"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "From the analysis carried out so "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -537,39 +570,15 @@
     }
    ],
    "source": [
-    "#get info for the test_df dataframe\n",
+    "# Get information on the train_feature_df dataframe. Ensure data types and number of entries per column are as expected.\n",
     "test_df.info()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 45,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1000000 entries, 0 to 999999\n",
-      "Data columns (total 9 columns):\n",
-      "jobId                  1000000 non-null object\n",
-      "companyId              1000000 non-null object\n",
-      "jobType                1000000 non-null object\n",
-      "degree                 1000000 non-null object\n",
-      "major                  1000000 non-null object\n",
-      "industry               1000000 non-null object\n",
-      "yearsExperience        1000000 non-null int64\n",
-      "milesFromMetropolis    1000000 non-null int64\n",
-      "salary                 1000000 non-null int64\n",
-      "dtypes: int64(3), object(6)\n",
-      "memory usage: 76.3+ MB\n"
-     ]
-    }
-   ],
    "source": [
-    "#get info for the train_df dataframe\n",
-    "train_df.info()"
+    "### Clean the data"
    ]
   },
   {
