Further data cleaning.

--- a/First Portfolio Project.ipynb
+++ b/First Portfolio Project.ipynb
@@ -54,6 +54,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "sns.set(style=\"darkgrid\")\n",
+    "sns.boxplot(data=random_data)\n",
     "\n",
     "# Importing scikit-learn pre-processing libraries\n",
     "\n",
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +87,11 @@
     "    df =  pd.read_csv(file)\n",
     "    shape = df.shape\n",
     "    print(\"Data file is loaded, the shape of the dataset = {}\".format(shape))\n",
-    "    return df"
+    "    return df\n",
+    "\n",
+    "def ends(df, x):\n",
+    "    print('{} rows x {} columns'.format(np.shape(df)[0],np.shape(df)[1]))\n",
+    "    return df.head(x).append(df.tail(x))"
    ]
   },
   {
@@ -98,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +321,7 @@
        "9       AUTO               17                   68     104  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +508,7 @@
        "9               23                   97  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +705,7 @@
        "salary                          0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +793,7 @@
        "milesFromMetropolis             0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,100 +811,315 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['yearsExperience' 'milesFromMetropolis' 'salary']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the column names for numerical columns from train_df to enable us to filter for invalid values \n",
+    "print(train_df.select_dtypes(include=['float64', 'int64']).columns.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   jobId companyId         jobType       degree        major  \\\n",
+      "30559   JOB1362684438246    COMP44          JUNIOR     DOCTORAL         MATH   \n",
+      "495984  JOB1362684903671    COMP34          JUNIOR         NONE         NONE   \n",
+      "652076  JOB1362685059763    COMP25             CTO  HIGH_SCHOOL         NONE   \n",
+      "816129  JOB1362685223816    COMP42         MANAGER     DOCTORAL  ENGINEERING   \n",
+      "828156  JOB1362685235843    COMP40  VICE_PRESIDENT      MASTERS  ENGINEERING   \n",
+      "\n",
+      "       industry  yearsExperience  milesFromMetropolis  salary  \n",
+      "30559      AUTO               11                    7       0  \n",
+      "495984      OIL                1                   25       0  \n",
+      "652076     AUTO                6                   60       0  \n",
+      "816129  FINANCE               18                    6       0  \n",
+      "828156      WEB                3                   29       0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Having found the column names for numerical columns from train_df, find rows that contain invalid values (i.e. <0 or <=0)\n",
+    "print(train_df[(train_df['yearsExperience'] < 0) | (train_df['milesFromMetropolis'] < 0) | (train_df['salary'] <= 0)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove the rows that contain invalid data from the train_df dataframe (i.e. salary was invalid in all cases, thus only\n",
+    "# include rows with salaries more than 0)\n",
+    "train_df = train_df[train_df.salary > 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 999995 entries, 0 to 999999\n",
+      "Data columns (total 9 columns):\n",
+      "jobId                  999995 non-null object\n",
+      "companyId              999995 non-null object\n",
+      "jobType                999995 non-null object\n",
+      "degree                 999995 non-null object\n",
+      "major                  999995 non-null object\n",
+      "industry               999995 non-null object\n",
+      "yearsExperience        999995 non-null int64\n",
+      "milesFromMetropolis    999995 non-null int64\n",
+      "salary                 999995 non-null int64\n",
+      "dtypes: int64(3), object(6)\n",
+      "memory usage: 76.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check dataframe information to confirm that the expected rows have been dropped\n",
+    "train_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "999995 rows x 9 columns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>jobId</th>\n",
+       "      <th>companyId</th>\n",
+       "      <th>jobType</th>\n",
+       "      <th>degree</th>\n",
+       "      <th>major</th>\n",
+       "      <th>industry</th>\n",
+       "      <th>yearsExperience</th>\n",
+       "      <th>milesFromMetropolis</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>JOB1362684407687</td>\n",
+       "      <td>COMP37</td>\n",
+       "      <td>CFO</td>\n",
+       "      <td>MASTERS</td>\n",
+       "      <td>MATH</td>\n",
+       "      <td>HEALTH</td>\n",
+       "      <td>10</td>\n",
+       "      <td>83</td>\n",
+       "      <td>130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>JOB1362684407688</td>\n",
+       "      <td>COMP19</td>\n",
+       "      <td>CEO</td>\n",
+       "      <td>HIGH_SCHOOL</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>WEB</td>\n",
+       "      <td>3</td>\n",
+       "      <td>73</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>JOB1362684407689</td>\n",
+       "      <td>COMP52</td>\n",
+       "      <td>VICE_PRESIDENT</td>\n",
+       "      <td>DOCTORAL</td>\n",
+       "      <td>PHYSICS</td>\n",
+       "      <td>HEALTH</td>\n",
+       "      <td>10</td>\n",
+       "      <td>38</td>\n",
+       "      <td>137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999992</th>\n",
+       "      <td>JOB1362685407684</td>\n",
+       "      <td>COMP23</td>\n",
+       "      <td>JUNIOR</td>\n",
+       "      <td>HIGH_SCHOOL</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>16</td>\n",
+       "      <td>81</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999993</th>\n",
+       "      <td>JOB1362685407685</td>\n",
+       "      <td>COMP3</td>\n",
+       "      <td>CFO</td>\n",
+       "      <td>MASTERS</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>HEALTH</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999994</th>\n",
+       "      <td>JOB1362685407686</td>\n",
+       "      <td>COMP59</td>\n",
+       "      <td>JUNIOR</td>\n",
+       "      <td>BACHELORS</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>20</td>\n",
+       "      <td>11</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   jobId companyId         jobType       degree    major  \\\n",
+       "0       JOB1362684407687    COMP37             CFO      MASTERS     MATH   \n",
+       "1       JOB1362684407688    COMP19             CEO  HIGH_SCHOOL     NONE   \n",
+       "2       JOB1362684407689    COMP52  VICE_PRESIDENT     DOCTORAL  PHYSICS   \n",
+       "999992  JOB1362685407684    COMP23          JUNIOR  HIGH_SCHOOL     NONE   \n",
+       "999993  JOB1362685407685     COMP3             CFO      MASTERS     NONE   \n",
+       "999994  JOB1362685407686    COMP59          JUNIOR    BACHELORS     NONE   \n",
+       "\n",
+       "         industry  yearsExperience  milesFromMetropolis  salary  \n",
+       "0          HEALTH               10                   83     130  \n",
+       "1             WEB                3                   73     101  \n",
+       "2          HEALTH               10                   38     137  \n",
+       "999992  EDUCATION               16                   81      64  \n",
+       "999993     HEALTH                6                    5     149  \n",
+       "999994  EDUCATION               20                   11      88  "
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reset the index of train_df after dropping the invalid values and print head and tail (using function ends) to confirm\n",
+    "# reindex. Makes rows sequential to prevent any misunderstanding in subsequent analysis.\n",
+    "train_df = train_df.reset_index(drop=True)\n",
+    "ends(train_df, 3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: [jobId, companyId, jobType, degree, major, industry, yearsExperience, milesFromMetropolis]\n",
-      "Index: []\n"
-     ]
-    }
-   ],
    "source": [
-    "#the resulting dataframe is an output of rows that contain null values for test_feature_df\n",
-    "null_data = test_feature_df[test_feature_df.isnull().any(axis=1)]\n",
-    "print(null_data)"
+    "##### Invalid numerical entries have been dropped from the train_df dataframe, ensuring only valid data informs the prediction model / system. Index has been reset to prevent any misunderstanding (due to non-sequential rows in data) in any further analysis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: [jobId, companyId, jobType, degree, major, industry, yearsExperience, milesFromMetropolis]\n",
-      "Index: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "#the resulting dataframe is an output of rows that contain null values for train_feature_df\n",
-    "null_data = train_feature_df[train_feature_df.isnull().any(axis=1)]\n",
-    "print(null_data)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: [jobId, salary]\n",
-      "Index: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "#the resulting dataframe is an output of rows that contain null values for train_target_df\n",
-    "null_data = train_target_df[train_target_df.isnull().any(axis=1)]\n",
-    "print(null_data)"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
